WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113544
GraphicsLayerCA::recomputeVisibleRects() shouldn't actually set the visible rect
https://bugs.webkit.org/show_bug.cgi?id=113544
Summary
GraphicsLayerCA::recomputeVisibleRects() shouldn't actually set the visible rect
Simon Fraser (smfr)
Reported
2013-03-28 16:26:00 PDT
GraphicsLayerCA::recomputeVisibleRects() shouldn't actually set the visible rect
Attachments
Patch
(8.62 KB, patch)
2013-03-28 16:31 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-03-28 16:31:33 PDT
Created
attachment 195675
[details]
Patch
Tim Horton
Comment 2
2013-03-28 16:39:08 PDT
Comment on
attachment 195675
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=195675&action=review
> Source/WebCore/ChangeLog:14 > + rect, it would need to make new tiles (which happens layer during a flush).
Layers on the brain?
> Source/WebCore/rendering/RenderLayerCompositor.h:140 > + void noteVisibleRectChanged();
Is "note" usually used for things that actually affect behavior? (I have no idea). didChangeVisibleRect?
Simon Fraser (smfr)
Comment 3
2013-04-09 14:41:11 PDT
http://trac.webkit.org/changeset/147186
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug