GraphicsLayerCA::recomputeVisibleRects() shouldn't actually set the visible rect https://bugs.webkit.org/show_bug.cgi?id=113544

Reviewed by Tim Horton.

The functions added in r147058 to update the visible rects of GraphicsLayerCAs
should not have actually set the m_visibleRect on the layer, because this
caused a later call to adjustTiledLayerVisibleRect() to think that the visible
rect had not changed, so it did no expansion.

Clarify the logic to ask the GraphicsLayer whether, given a new visible
rect, it would need to make new tiles (which happens later during a flush).

Add a function to RenderLayerCompositor to call this code (but which has
no callers yet).

* platform/graphics/GraphicsLayer.h:
(WebCore::GraphicsLayer::visibleRectChangeRequiresFlush): Make private.
* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::recursiveVisibleRectChangeRequiresFlush):
(WebCore::GraphicsLayerCA::visibleRectChangeRequiresFlush):
* platform/graphics/ca/GraphicsLayerCA.h:
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::noteVisibleRectChanged):
* rendering/RenderLayerCompositor.h:
(RenderLayerCompositor):

Canonical link: https://commits.webkit.org/131901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147186 268f45cc-cd09-0410-ab3c-d52691b4dbfc